Trying to fix the picture.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ main {
     justify-content: center;
     height: 450px;
     width: 850px;
-    background-image: url(./spaceshuttle2.jpg);
+    background-image: url(./spaceshuttle.jpg);
     background-size: contain;
 }
 
