--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ main {
     justify-content: center;
     height: 450px;
     width: 850px;
-    background-image: url(./spaceshuttle.jpg);
+    background-image: url("./spaceshuttle.jpg");
     background-size: cover;
 }
 
